@@ -289,6 +289,8 @@ enum {
 #define MPI_RSEND_INIT_EV            50000077
 #define MPI_SSEND_INIT_EV            50000078
 #define MPI_REQUEST_GET_STATUS_EV    50000079
+#define MPI_INTERCOMM_CREATE_EV      50000085
+#define MPI_INTERCOMM_MERGE_EV       50000086
 
 #define MPI_GLOBAL_OP_SENDSIZE       (MPI_INIT_EV+100000)
 #define MPI_GLOBAL_OP_RECVSIZE       (MPI_INIT_EV+100001)
